# Prefect

./: README.md  pipelines.py  pyproject.toml  setup.py
pipelines.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
