[tool.poetry]
name = "PrefProject"
version = "0.1.0"
description = ""
authors = ["Arina <arrishok@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.3"
prefect = "^2.7.12"
setuptools = "^67.2.0"
click = "^8.1.3"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
